--- a/index.html
+++ b/index.html
@@ -323,7 +323,71 @@
             </a></li>
           </ul>
         </div>
-      </div>
+          <div class="footer-form-main">
+            <p class="footer-form-text">Subscribe</p>
+            <div class="footer-form-wrap"></div>
+            <form class="footer-form">
+                <label for="footer-email" aria-label="E-mail"></label>
+                <input type="text" id="footer-email" name="footer-email" class="footer-input" placeholder="E-mail">
+              </div>
+              <button type="submit" class="footer-form-button">Subscribe<svg class="footer-icon-send" width="24" height="20">
+                <use href="./images/icons.svg#icon-send"></use>
+              </svg></button>
+            </form>
+          </div>      
+        </div>
     </footer>
+    <div class="backdrop">
+      <div class="modal-main">
+        <button type="button" class="modal-close-btn">
+          <svg class="modal-close-icon" width="8" height="8">
+            <use href="./images/icons.svg#icon-close"></use>
+          </svg>
+        </button>
+        <p class="modal-title">Leave your contacts and we will call you back</p>
+        <form class="modal-form">
+          <div class="modal-field">
+            <label for="user-name" class="modal-label-text">Name</label>
+              <div class="modal-field-wrap">
+              <input type="text" name="user-name" class="modal-input" placeholder="Enter name" required id="user-name"/>
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-person"></use>
+              </svg>
+              </div>
+          </div>
+          <div class="modal-field">
+            <label for="user-phone" class="modal-label-text">Phone</label>
+            <div class="modal-field-wrap">
+              <input type="text" name="user-phone" class="modal-input" placeholder="Enter phone" required id="user-phone"/>
+            <svg class="modal-icon" width="18" height="18">
+              <use href="./images/icons.svg#icon-phone"></use>
+            </svg></div>
+          </div>
+          <div class="modal-field">
+            <label for="user-email" class="modal-label-text">Email</label>
+            <div class="modal-field-wrap">
+              <input type="text" name="user-email" class="modal-input" placeholder="Enter email" required id="user-email"/>
+              <svg class="modal-icon" width="18" height="18">
+                <use href="./images/icons.svg#icon-email"></use>
+              </svg>
+            </div>
+          </div>
+          <div class="modal-field">
+          <label for="user-comment" class="modal-label-text">Comment</label>
+          <textarea name="user-comment" id="user-comment" class="modal-text-comment" placeholder="Text input"></textarea>                        
+          </div>
+            <div class="modal-field">
+              <input type="checkbox" name="policy" id="policy" value="true" class="modal-check visually-hidden"/>
+              <label for="policy" class="modal-check-text">
+                <span>
+                <svg class="modal-check-icon" width="10" height="8">
+                  <use href="./images/icons.svg#icon-check"></use>
+                </svg>
+              </span>I accept the terms and conditions of the <a href="" class="link-privacy" target="_blank">Privacy Policy</a></label>
+              </div>
+          <button type="submit" class="modal-button">Send</button>
+        </form>
+      </div>
+    </div>
   </body>
 </html>
