--- a/index.html
+++ b/index.html
@@ -290,51 +290,50 @@
     </section>
     </main>
     <footer class="footer">
-      <div class="container footer-container">
-        <div class="footer-logo-container">
-          <a class="footer-logo" href="./index.html">Web<span class="footer-logo-colored">Studio</span></a>
-          <p class="footer-text">
-            Increase the flow of customers and sales for your business with digital
-            marketing & growth solutions.
-          </p>
-        </div>
-        <div class="footer-icon-container">
-          <p class="footer-icon-text">Social media</p>
-          <ul class="footer-list">
-            <li class="footer-item"><a class="footer-item-link" href="">
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-instagram"></use>
-              </svg>
-            </a></li>
-            <li class="footer-item"><a class="footer-item-link" href="">
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-twitter"></use>
-              </svg>
-            </a></li>
-            <li class="footer-item"><a class="footer-item-link" href="">
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-facebook"></use>
-              </svg>
-            </a></li>
-            <li class="footer-item"><a class="footer-item-link" href="">
-              <svg class="footer-icon" width="24" height="24">
-                <use href="./images/icons.svg#icon-linkedin"></use>
-              </svg>
-            </a></li>
-          </ul>
-        </div>
-          <div class="footer-form-main">
-            <p class="footer-form-text">Subscribe</p>
-            <div class="footer-form-wrap"></div>
-            <form class="footer-form">
-                <label for="footer-email" aria-label="E-mail"></label>
-                <input type="text" id="footer-email" name="footer-email" class="footer-input" placeholder="E-mail">
-              </div>
-              <button type="submit" class="footer-form-button">Subscribe<svg class="footer-icon-send" width="24" height="20">
-                <use href="./images/icons.svg#icon-send"></use>
-              </svg></button>
-            </form>
-          </div>      
+        <div class="container footer-container">
+          <div class="footer-logo-container">
+            <a class="footer-logo" href="./index.html">Web<span class="footer-logo-colored">Studio</span></a>
+            <p class="footer-text">
+              Increase the flow of customers and sales for your business with digital
+              marketing & growth solutions.
+            </p>
+          </div>
+          <div class="footer-icon-container">
+            <p class="footer-icon-text">Social media</p>
+            <ul class="footer-list">
+              <li class="footer-item"><a class="footer-item-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-instagram"></use>
+                </svg>
+              </a></li>
+              <li class="footer-item"><a class="footer-item-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-twitter"></use>
+                </svg>
+              </a></li>
+              <li class="footer-item"><a class="footer-item-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-facebook"></use>
+                </svg>
+              </a></li>
+              <li class="footer-item"><a class="footer-item-link" href="">
+                <svg class="footer-icon" width="24" height="24">
+                  <use href="./images/icons.svg#icon-linkedin"></use>
+                </svg>
+              </a></li>
+            </ul>
+          </div>
+            <div class="footer-form-main">
+              <p class="footer-form-text">Subscribe</p>
+              <div class="footer-form-wrap">
+                <form class="footer-form">
+                  <label for="footer-email" aria-label="E-mail"></label>
+                  <input type="text" id="footer-email" name="footer-email" class="footer-input" placeholder="E-mail"></form>
+                  </div>
+                <button type="submit" class="footer-form-button">Subscribe<svg class="footer-icon-send" width="24" height="20">
+                  <use href="./images/icons.svg#icon-send"></use>
+                </svg></button>
+            </div>  
         </div>
     </footer>
     <div class="backdrop">
@@ -350,7 +349,7 @@
             <label for="user-name" class="modal-label-text">Name</label>
               <div class="modal-field-wrap">
               <input type="text" name="user-name" class="modal-input" placeholder="Enter name" required id="user-name"/>
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-person"></use>
               </svg>
               </div>
@@ -359,7 +358,7 @@
             <label for="user-phone" class="modal-label-text">Phone</label>
             <div class="modal-field-wrap">
               <input type="text" name="user-phone" class="modal-input" placeholder="Enter phone" required id="user-phone"/>
-            <svg class="modal-icon" width="18" height="18">
+            <svg class="modal-icon" width="18" height="24">
               <use href="./images/icons.svg#icon-phone"></use>
             </svg></div>
           </div>
@@ -367,7 +366,7 @@
             <label for="user-email" class="modal-label-text">Email</label>
             <div class="modal-field-wrap">
               <input type="text" name="user-email" class="modal-input" placeholder="Enter email" required id="user-email"/>
-              <svg class="modal-icon" width="18" height="18">
+              <svg class="modal-icon" width="18" height="24">
                 <use href="./images/icons.svg#icon-email"></use>
               </svg>
             </div>
@@ -376,10 +375,10 @@
           <label for="user-comment" class="modal-label-text">Comment</label>
           <textarea name="user-comment" id="user-comment" class="modal-text-comment" placeholder="Text input"></textarea>                        
           </div>
-            <div class="modal-field">
-              <input type="checkbox" name="policy" id="policy" value="true" class="modal-check visually-hidden"/>
-              <label for="policy" class="modal-check-text">
-                <span>
+            <div class="modal-field-check">
+              <input type="checkbox" name="user-privacy" id="user-privacy" value="true" class="modal-check visually-hidden"/>
+              <label for="user-privacy" class="modal-check-text">
+                <span class="check-span">
                 <svg class="modal-check-icon" width="10" height="8">
                   <use href="./images/icons.svg#icon-check"></use>
                 </svg>
