--- a/index.html
+++ b/index.html
@@ -325,15 +325,15 @@
           </div>
             <div class="footer-form-main">
               <p class="footer-form-text">Subscribe</p>
-              <div class="footer-form-wrap">
-                <form class="footer-form">
-                  <label for="footer-email" aria-label="E-mail"></label>
-                  <input type="text" id="footer-email" name="footer-email" class="footer-input" placeholder="E-mail"></form>
-                  </div>
-                <button type="submit" class="footer-form-button">Subscribe<svg class="footer-icon-send" width="24" height="20">
-                  <use href="./images/icons.svg#icon-send"></use>
-                </svg></button>
-            </div>  
+                <div class="footer-form-wrap">
+                  <form class="footer-form">
+                    <label for="footer-email" aria-label="E-mail" class="footer-email"></label>
+                    <input type="email" id="footer-email" name="footer-email" class="footer-input" placeholder="E-mail"></form>
+                  <button type="submit" class="footer-form-button">Subscribe<svg class="footer-icon-send" width="24" height="24">
+                    <use href="./images/icons.svg#icon-send"></use>
+                  </svg></button>
+                </div>
+            </div>
         </div>
     </footer>
     <div class="backdrop">
