--- a/index.html
+++ b/index.html
@@ -325,14 +325,14 @@
           </div>
             <div class="footer-form-main">
               <p class="footer-form-text">Subscribe</p>
-                <div class="footer-form-wrap">
-                  <form class="footer-form">
-                    <label for="footer-email" aria-label="E-mail" class="footer-email"></label>
-                    <input type="email" id="footer-email" name="footer-email" class="footer-input" placeholder="E-mail"></form>
+                <form class="footer-form">
+                  <label for="footer-email" aria-label="E-mail" class="footer-email"></label>
+                  <input type="email" id="footer-email" name="footer-email" class="footer-input" placeholder="E-mail">
                   <button type="submit" class="footer-form-button">Subscribe<svg class="footer-icon-send" width="24" height="24">
-                    <use href="./images/icons.svg#icon-send"></use>
-                  </svg></button>
-                </div>
+                      <use href="./images/icons.svg#icon-send"></use>
+                    </svg></button>
+                </form>
+              </div>
             </div>
         </div>
     </footer>
@@ -371,7 +371,7 @@
               </svg>
             </div>
           </div>
-          <div class="modal-field">
+          <div class="modal-field-comment">
           <label for="user-comment" class="modal-label-text">Comment</label>
           <textarea name="user-comment" id="user-comment" class="modal-text-comment" placeholder="Text input"></textarea>                        
           </div>
