--- a/index.html
+++ b/index.html
@@ -326,15 +326,14 @@
             <div class="footer-form-main">
               <p class="footer-form-text">Subscribe</p>
                 <form class="footer-form">
-                  <label for="footer-email" aria-label="E-mail" class="footer-email"></label>
-                  <input type="email" id="footer-email" name="footer-email" class="footer-input" placeholder="E-mail">
+                  <label for="footer-email" aria-label="E-mail" class="footer-email">
+                  <input type="email" id="footer-email" name="footer-email" class="footer-input" placeholder="E-mail"></label>
                   <button type="submit" class="footer-form-button">Subscribe<svg class="footer-icon-send" width="24" height="24">
                       <use href="./images/icons.svg#icon-send"></use>
                     </svg></button>
                 </form>
               </div>
             </div>
-        </div>
     </footer>
     <div class="backdrop">
       <div class="modal-main">
